@@ -1,1 +1,1 @@
-../rc.d/S56samba
+../rc.d/S24samba
