@@ -1,1 +1,1 @@
-../rc.d/S49snmpd
+../rc.d/S23snmpd
