@@ -56,7 +56,9 @@ static void setSysAdm(webs_t wp, char_t *path, char_t *query)
 	doSystem("service pass start");
 	doSystem("service sysctl restart");
 	doSystem("service inetd restart");
+#if defined(CONFIG_USER_SAMBA) || defined(CONFIG_USER_SAMBA3)
 	doSystem("service samba restart");
+#endif
 
 #ifdef USER_MANAGEMENT_SUPPORT
 	if (umGroupExists(T("adm")) == FALSE)
